--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a token tracker website for hospitals",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [
     "tokentracker"
