--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^5.3.2",
     "uuid": "^3.3.2"
   },
   "scripts": {
@@ -33,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:3000/"
+  "proxy": "http://localhost:3000/"
 }
