--- a/client/package.json
+++ b/client/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://bristalava.herokuapp.com/"
+  "proxy": "http://localhost:3000/"
 }
