--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "a token tracker website for hospitals",
   "main": "app.js",
+  "engines":{
+    "node":"10.15.2",
+    "npm":"6.4.1"
+  },
   "scripts": {
     "start": "node app.js",
     "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
